--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -4,15 +4,71 @@ Author: the Becode team
 Version: 0.1
 */
 .foodog-pagination{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    font-size: 12px;
     li{
+        color: black;
+        list-style-type: none;
+        padding: 5px;
+        border: 1px solid grey;
+        border-radius: 50%;
+        width: 25px;
+        height: 25px;
+        margin: 0px 5px;
         .foodog-pagination-link{
-            color: black;
+            display: block;
+            color: gray;
+            text-decoration: none;
+            transform: translateX(3px) translateY(-3px);
+        }
+        .dots{
+            transform: translateY(-6px) translateX(2px);
+        }
+    }
+    .foodog-pagination-current{
+        background-color: #3a3e43;
+        border: 1px solid #3a3e43;
+        span{
+            color: white;
         }
     }
 }
 
-.foodog-menu{
-    .foodog-menu-link{
-        color: black;
+
+.foodog-menu-categorie{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    padding-left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    .foodog-menu{
+        list-style-type: none;
+        text-transform: uppercase;
+        font-size: 10px;
+        .foodog-menu-link{
+            color: black;
+            text-decoration: none;
+            padding-right: 15px;
+            padding-left: 15px;
+            padding-bottom: 5px;
+            &:hover{
+                border-bottom: 2px solid black;
+            }
+        }
+        
     }
+}
+
+.foodog-header-title{
+    display: flex;
+    flex-direction: column;
+}
+
+.foodog-separation{
+    width: 80%;
+    margin-top: 0;
+    padding-top: 0;
 }
