--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -148,19 +148,9 @@ Version: 0.1
 }
 
 .foodog-search {
-  border: none;
-  border-radius: 0;
-  width: 0;
-  padding: 0;
-  -webkit-transition: width 0.3s;
-  transition: width 0.3s;
-}
-
-.foodog-search-button:hover > .foodog-search {
-  width: 150px;
   border: 1px solid gray;
-  padding: 0px 10px;
   border-radius: 5px;
+  width: 80%;
 }
 
 .foodog-header-title {
