--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -3,6 +3,11 @@ Theme Name: Foodog
 Author: the Becode team
 Version: 0.1
 */
+
+.foodog-body{
+    width: 60%;
+}
+
 .foodog-pagination{
     display: flex;
     flex-direction: row;
@@ -60,6 +65,13 @@ Version: 0.1
         }
         
     }
+}
+
+
+.foodog-home-page{
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .foodog-btn-top{
@@ -127,4 +139,158 @@ Version: 0.1
     width: 80%;
     margin-top: 0;
     padding-top: 0;
+}
+
+.foodog-home-first-card{
+    width: 100%;
+    padding: 0px 5px;
+    img{
+        width: 100%;
+        height: auto;
+    }
+    ul{
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        justify-content: center;
+        li{
+            list-style-type: none;
+            padding: 0px 5px;
+            a{
+                text-decoration: none;
+                color: #ff9473;
+                font-weight: bold;
+                font-size: 10px;
+            }
+        }
+    }
+    h2{
+        width: 100%;
+        text-align: center;
+        font-size: 1.5rem;
+        margin-top: -10px;
+    }
+}
+
+.foodog-home-second-card{
+    width: 100%;
+    padding: 0px 5px;
+    img{
+        width: 100%;
+        height: auto;
+    }
+    
+    h2{
+        width: 100%;
+        text-align: center;
+        font-size: 1rem;
+        height: 50px;
+    }
+}
+
+.foodog-home-subtitle-parts{
+    display: flex;
+    flex-direction: row;
+    padding: 20px 0px;
+    p{
+        font-weight: bold;
+        font-size: 12px;
+        text-transform: uppercase;
+    }
+    hr{
+        display: flex;
+        flex: 1;
+        margin: auto 20px;
+    }
+}
+
+.foodog-home-featured-card{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    img{
+        width: 100%;
+    }
+}
+
+.foodog-home-featured-card-desc{
+    width: 100%;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    ul{
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        justify-content: start;
+        li{
+            list-style-type: none;
+            padding:0 ;
+            padding-right: 10px;
+            a{
+                text-decoration: none;
+                color: #ff9473;
+                font-weight: bold;
+                font-size: 10px;
+            }
+        }
+    }
+    h2{
+        width: 100%;
+        font-size: 1rem;
+        margin: 0;
+        margin-top: -10px;
+    }
+    p{
+        font-size: 12px;
+    }
+    button{
+        background-color: white;
+        border: none;
+        width: 90px;
+        padding: 0;
+        text-align: start;
+        i{
+            border: 1px solid gray;
+            border-radius: 50%;
+            padding: 5px;
+        }
+    }
+}
+
+.foodog-home-lastest-card{
+    width: 100%;
+    padding: 0px 5px;
+    img{
+        width: 100%;
+    }
+    ul{
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        justify-content: center;
+        li{
+            list-style-type: none;
+            padding:0 ;
+            padding-right: 10px;
+            a{
+                text-decoration: none;
+                color: #ff9473;
+                font-weight: bold;
+                font-size: 10px;
+            }
+        }
+    }
+    h2{
+        width: 100%;
+        font-size: 1rem;
+        margin: 0;
+        margin-top: -10px;
+        text-align: center;
+    }
+    p{
+        font-size: 12px;
+        text-align: center;
+        padding-bottom: 5px;
+    }
 }
