--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -295,3 +295,100 @@ Version: 0.1
         padding-bottom: 5px;
     }
 }
+
+.foodog-advertising{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    img{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    button{
+        display: block;
+        position: absolute;
+        background-color: #ff8d6a;
+        border: none;
+        width: 100px;
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: bold;
+        color: white;
+        padding-top: 5px ;
+        padding-bottom: 5px;
+        right: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(232px);
+
+
+    }
+}
+
+.foodog-advertising-social{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    div{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        padding: 8px;
+        color: white;
+        button{
+            margin-left: auto;
+            border: none;
+            background-color: rgba($color: #000000, $alpha: 0.0);
+            color: white;
+            text-transform: uppercase;
+            font-size: 13px;
+        }
+        i{
+            transform:  translateY(2px);
+        }
+        span{
+            font-size: 12px;
+            transform:  translateX(5px);
+        }
+
+        border: 2px solid white;
+    }
+    .foodog-facebook{
+        background-color: #899dce;
+    }
+    .foodog-twitter{
+        background-color: #60d2f5;
+    }
+    .foodog-instagram{
+        background-color: #709cbf;
+    }
+}
+
+.foodog-advertising-social-single-page{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+    div{
+        margin-left: auto;
+        margin-right: auto;
+        width: 120px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        i{
+            width: 25px;
+            height: 25px;
+            color: white;
+            background-color: rgb(77, 77, 77);
+            padding: 5px;
+            border-radius: 50%;
+            
+        }
+    }
+    h2{
+        color: gray;
+        font-size: 13px;
+        text-transform: uppercase;
+    }
+}
