--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -19,13 +19,14 @@ Version: 0.1
 
 .foodog-footericon {
   a {
-    background-color: rgb(41, 41, 41);
+    background-color: rgb(66, 66, 66);
     border-radius: 50%;
   }
   button {
     border-radius: 50%;
     align-items: center;
     justify-content: center;
+    background-color: #5555eb;
   }
 }
 
