centered button footer

--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -21,6 +21,8 @@ Version: 0.1
   a {
     background-color: rgb(66, 66, 66);
     border-radius: 50%;
+    padding: 0;
+    padding-top: 7px;
   }
   button {
     border-radius: 50%;
