--- a/wp-content/themes/foodog/style.css
+++ b/wp-content/themes/foodog/style.css
@@ -8,6 +8,18 @@ Version: 0.1
   min-width: 600px;
 }
 
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-family: 'Crimson Text', serif;
+}
+
+h2, h3, h4 {
+  font-weight: bolder;
+}
+
 .foodog-pagination {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -221,6 +233,7 @@ Version: 0.1
   text-align: center;
   font-size: 1.5rem;
   margin-top: -10px;
+  text-transform: uppercase;
 }
 
 .foodog-home-second-card {
@@ -238,6 +251,7 @@ Version: 0.1
   text-align: center;
   font-size: 1rem;
   height: 50px;
+  text-transform: uppercase;
 }
 
 .foodog-home-subtitle-parts {
@@ -326,6 +340,7 @@ Version: 0.1
   font-size: 1rem;
   margin: 0;
   margin-top: -10px;
+  text-transform: uppercase;
 }
 
 .foodog-home-featured-card-desc p {
@@ -388,6 +403,7 @@ Version: 0.1
   margin: 0;
   margin-top: -10px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .foodog-home-lastest-card p {
@@ -528,5 +544,52 @@ Version: 0.1
   color: gray;
   font-size: 13px;
   text-transform: uppercase;
+}
+
+.menu-single-specif {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: left;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 60px;
+}
+
+.foodog-menu-single-mailbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 15px;
+}
+
+.foodog-menu-single-mailbox * {
+  height: 25px;
+}
+
+.foodog-menu-single-mailbox p {
+  padding-right: 10px;
+}
+
+.foodog-menu-single-mailbox input {
+  border: 2px solid black;
+  font-size: 10px;
+  padding-left: 5px;
+}
+
+.foodog-menu-single-mailbox button {
+  background-color: black;
+  border: 2px solid black;
+  color: white;
+  text-transform: uppercase;
+  font-size: 10px;
 }
 /*# sourceMappingURL=style.css.map */
