--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -9,6 +9,17 @@ Version: 0.1
     min-width: 600px;
 }
 
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+
+h1{
+    font-family: 'Crimson Text', serif;
+}
+h2, h3, h4{
+    font-weight: bolder;
+} 
+
 .foodog-pagination{
     display: flex;
     flex-direction: row;
@@ -170,6 +181,7 @@ Version: 0.1
         text-align: center;
         font-size: 1.5rem;
         margin-top: -10px;
+        text-transform: uppercase;
     }
 }
 
@@ -186,6 +198,7 @@ Version: 0.1
         text-align: center;
         font-size: 1rem;
         height: 50px;
+        text-transform: uppercase;
     }
 }
 
@@ -241,6 +254,7 @@ Version: 0.1
         font-size: 1rem;
         margin: 0;
         margin-top: -10px;
+        text-transform: uppercase;
     }
     p{
         font-size: 12px;
@@ -288,6 +302,7 @@ Version: 0.1
         margin: 0;
         margin-top: -10px;
         text-align: center;
+        text-transform: uppercase;
     }
     p{
         font-size: 12px;
@@ -390,5 +405,37 @@ Version: 0.1
         color: gray;
         font-size: 13px;
         text-transform: uppercase;
+    }
+}
+
+.menu-single-specif{
+    flex-direction: column;
+    text-align: left;
+    justify-content: space-around;
+    height: 60px;
+}
+
+.foodog-menu-single-mailbox{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 15px;
+    *{
+        height: 25px;
+    }
+    p{
+        padding-right: 10px;
+    }
+    input{
+        border: 2px solid black;
+        font-size: 10px;
+        padding-left: 5px;
+    }
+    button{
+        background-color: black;
+        border: 2px solid black;
+        color: white;
+        text-transform: uppercase;
+        font-size: 10px;
     }
 }
