--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -13,6 +13,406 @@ Version: 0.1
 
 .foodog-menu{
     .foodog-menu-link{
-        color: black;
+        color: white; /* change */
+        text-decoration: none;
+        i{
+            margin-right: 5px; /* change */
+        }
     }
+}
+/* --------- */
+
+.post.content{
+    width: 80%;
+}
+.foodog-page-title {
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 0 50px 0;
+    a{
+      color: #4B4F54;
+      &:hover{
+        text-decoration: none;
+      }
+    }
+}
+.foodog-post-thumbnails{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+.foodog-social-middle-bar{
+    width: 100%;
+    height: 50px;
+    margin: 40px 0 40px 0;
+    border-top:  1px solid rgb(204, 204, 204); 
+    border-bottom: 1px solid rgb(204, 204, 204);
+    p{
+        color: rgb(180, 180, 180);
+        line-height: 50px;
+        display: inline-block;
+        img{
+          border-radius: 50%;
+          margin-right: 20px;
+          width: 40px;
+          height: 40px;
+        }
+        .author-name-post{
+          text-transform: uppercase;
+        }
+    }
+}
+
+.foodog-post-social-begin{
+  text-align: center;
+  display: inline-block;
+ 
+  span{
+      
+      text-transform: uppercase;
+      margin-right: 20px;
+      font-weight: bold;
+      
+  }
+  ul{
+      list-style-type:none;
+      padding: 0;
+      display: inline-block;
+      li{
+          width: 30px;
+          padding: 4px 6px;
+          display: inline-block;
+          border-radius: 50%;
+          margin-right: 20px;
+          font-size: 14px;
+          .foodog-menu-link{
+            i{
+              margin: 0;
+            }
+          }
+      }
+      .comment{
+        background-color: black;
+        width: 120px;
+        border-radius: 5px;
+        &:hover{
+          background-color: rgb(70, 70, 70);
+        }
+        .foodog-menu-link{
+          i{
+            margin-right: 10px;
+          }
+        }
+      }
+      .facebook{
+          background-color: #4267B2;
+          &:hover{
+            background-color: rgb(103, 133, 192);
+          }
+      }
+      .twitter{
+          background-color: #1DA1F2;
+          &:hover{
+            background-color: rgb(78, 182, 247);
+          }
+      }
+      .pinterest{
+          background-color: #BD081C;
+          &:hover{
+            background-color: rgb(194, 55, 71);
+          }
+      }
+      .google{
+          background-color: black;
+      }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+/* Reseaux Sociaux Fin Article */
+.foodog-post-social-end{
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    p{
+        display: inline-block;
+        text-transform: uppercase;
+        margin-right: 20px;
+        font-weight: bold;
+    }
+    ul{
+        list-style-type:none;
+        padding: 0;
+        display: inline-block;
+        li{
+            width: 110px;
+            padding: 6px 8px;
+            display: inline-block;
+            border-radius: 5px;
+            text-align: center;
+            margin-right: 20px;
+            font-size: 12px;
+        }
+        .comment{
+          background-color: black;
+          &:hover{
+            background-color: rgb(70, 70, 70);
+          }
+        }
+        .facebook{
+            background-color: #4267B2;
+            &:hover{
+              background-color: rgb(103, 133, 192);
+            }
+        }
+        .twitter{
+            background-color: #1DA1F2;
+            &:hover{
+              background-color: rgb(78, 182, 247);
+            }
+        }
+        .pinterest{
+            background-color: #BD081C;
+            &:hover{
+              background-color: rgb(194, 55, 71);
+            }
+        }
+        .google{
+            background-color: black;
+        }
+    }
+}
+
+/* Newsletter */
+.foodog-newsletter-single{
+    text-align: center;
+    margin-top: 60px;
+    h3{
+        font-size: 35px;
+        margin: 30px 0 30px 0;
+    }
+    p{
+        margin: 30px 0 30px 0;
+    }
+    input{
+        padding: 8px 40px 10px 10px;
+    }
+    .foodog-newsletter-btn{
+        text-transform: uppercase;
+        color: white;
+        background-color: #FF8C70;
+        border: none;
+        padding: 8px 40px 10px 40px;
+        border: 2px solid #FF8C70;
+        font-weight: bold;
+        transition: all 0.3s linear;
+        &:hover{
+          background-color: white;
+          color: #FF8C70;
+        }
+    }
+}
+
+/* Previous Posts */
+.foodog-previous-post{
+    margin: 10px 0 0 0;
+    border-top:  1px solid rgb(204, 204, 204); 
+    border-bottom: 1px solid rgb(204, 204, 204);
+    height: 150px;
+    .row{
+        margin-top: 20px;
+        .column {
+            float: left;
+            padding: 10px;
+            height: 150px; 
+          }
+          .left {
+            width: 49%;
+            padding: 0 0 0 20px;
+            .foodog-previous-link-p{
+                margin:  0 0 30px 0;
+            }
+            .foodog-previous-link-a{
+                color: #ADADAD;
+                text-transform: uppercase;
+            }
+            .foodog-previous-title-a{
+                color: black;
+                text-transform: uppercase;
+            }
+          }
+          .vl {
+            border-left: 1px solid rgb(204, 204, 204);
+            height: 100px;
+          }
+          .right {
+            width: 49%;
+          }
+    }
+}
+
+@media (max-width:1200px){
+  .foodog-previous-post{
+    height: auto;
+    .row{
+      .left {
+        .foodog-previous-title-a{
+        font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+/* Author Bio (description) */
+.foodog-author-bio-single{
+    margin: 50px 0 50px 0;
+    img{
+        width: 20%;
+        height: 20%;
+        border-radius: 50%;
+        float: left;
+    }
+    h5{
+        display: inline-block;
+        margin-left: 5%;
+        font-weight: bold;
+    }
+    p{
+        margin-left: 25%;
+    }
+}
+
+/* Related Posts */
+.foodog-related-posts{
+    margin-top: 40px;
+      .related-title{
+        font-size: 20px;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+      }
+      .related-title::after{
+        content: "";
+        width: 62%;
+        height: 4px;
+        background: rgb(238, 238, 238);
+        position: absolute;
+        margin-left: 15px;
+        top: 50%;
+        
+      }
+      .foodog-related-individual{
+          display: inline-block;
+          max-width: 200px;
+          height: 350px;
+          vertical-align: middle;
+    
+        .foodog-post-related-img{
+            width: 200px;
+            height: 200px;
+            margin: 20px 9px 0 0;
+        }
+        .related-post-title{
+          color: black;
+          text-transform: uppercase;
+          margin-top: 15px;
+          font-weight: bold;
+        }
+      }
+}
+
+@media   (max-width: 1200px) {
+  .foodog-related-posts{
+    .foodog-related-individual{
+      display: block;
+      width: 400px;
+      height: auto;
+      .foodog-post-related-img{
+        width: 400px;
+        height: 400px;
+      }
+    }
+  }
+}
+
+/* Comments Form */
+#commentform{
+  label{
+    display: none;
+  }
+  .comment-notes{
+    display: none;
+  }
+  .comment-form-comment{ 
+      margin: 0;
+      textarea{
+        width: 100%;
+        margin-top: 30px;
+        border: 2px solid rgb(238, 238, 238);
+        padding: 15px;
+          &:focus{
+            background-color: rgb(224, 224, 224);
+            border: 2px solid rgb(109, 190, 245);
+          }
+      }
+  }
+  .comment-form-author, .comment-form-email, .comment-form-url{
+      width: 32.5%;
+      margin: 0 2px 0 0;
+      display: inline-block;
+        input{
+          width: 100%;
+          padding: 8px 15px;
+          display: inline-block;
+          border: 2px solid rgb(238, 238, 238);
+          margin-top: 20px;
+            &:focus{
+              background-color: rgb(224, 224, 224);
+              border: 2px solid rgb(109, 190, 245);
+            }
+        }
+  }
+  .comment-form-cookies-consent{
+    display: none;
+  }
+  .form-submit{
+    margin-bottom: 150px;
+    #submit{
+      color: white;
+      padding: 10px 20px;
+      text-transform: uppercase;
+      background-color: black;
+      border: 2px solid black;
+      margin-top: 30px;
+      transition: all 0.3s linear;
+      &:hover{
+        color: black;
+        background-color: white;
+        border: 2px solid black;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  #commentform{
+    .comment-form-author, .comment-form-email, .comment-form-url{
+      width: 100%;
+        input{
+          width: 100%;
+        }
+    }
+  }
 }
